# a01

db/: create_tb01.sql
go/: go.mod  go.sum  handler.go  main.go  post.http
gui/: index.html
node/: .env.example  app.ts  package-lock.json  package.json
node/prisma/: schema.prisma
node/prisma/db-client/: edge.js  index-browser.js  index.d.ts  index.js
rust/: .env.example  Cargo.toml  routes.http
rust/src/: main.rs
rust/src/handlers/: get.rs  post.rs
